# hackaton_build_paris_in_a_day

./: .gitignore  README.md  main.py  pyproject.toml  trajet_total.html  trajet_velo_200km.html
data/: filter.py  voirie.py
maps/: trajet_multi.html  trajet_total.html  trajet_velo_100km.html
nerfstudio/: readme.md  strasbourg.csv  strasbourg_2025.csv  strasbourg_limited.csv
notebooks/: 1-voirie_paris.ipynb  2-filtrer_impasses.ipynb  3-troncons_connection.ipynb  4-statistiques.ipynb  5-poids_voies.ipynb
presentation/: slides.md
src/data/: calcul_trajet.py  connectors.py  voirie.py
