[project]
name = "hackaton-build-paris-in-a-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "py3dep>=0.19.0",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
]
